# avrs-rpm-sensor

./: CONSTRUCTION.md  Cargo.toml  README.md
src/: main.rs  timer.rs
stl/: flywheel.stl  mount.stl
